[gd_scene load_steps=7 format=2]

[ext_resource path="res://EditableSprite.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://palette.tscn" type="PackedScene" id=3]
[ext_resource path="res://ExportButton.gd" type="Script" id=4]
[ext_resource path="res://UIRoot.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Node2D" type="Node2D"]
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="EditableSprite" type="Area2D" parent="."]
position = Vector2( 749, 348 )
scale = Vector2( 8, 8 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="EditableSprite"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EditableSprite"]
shape = SubResource( 1 )

[node name="UIRoot" type="Control" parent="."]
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileScroller" type="ScrollContainer" parent="UIRoot"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1024.0
margin_bottom = 87.0
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileSelector" type="HBoxContainer" parent="UIRoot/TileScroller"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaletteScroller" type="ScrollContainer" parent="UIRoot"]
margin_left = 13.0
margin_top = 227.0
margin_right = 92.0
margin_bottom = 690.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaletteSelector" type="VBoxContainer" parent="UIRoot/PaletteScroller"]

[node name="ColorPicker" type="ColorPicker" parent="UIRoot"]
margin_left = 151.041
margin_top = 202.823
margin_right = 459.042
margin_bottom = 664.823
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Palette" parent="UIRoot" instance=ExtResource( 3 )]
margin_left = 10.0
margin_top = 90.0
margin_right = 10.0
margin_bottom = 90.0

[node name="ExportButton" type="Button" parent="UIRoot"]
margin_left = 845.107
margin_top = 642.283
margin_right = 993.107
margin_bottom = 668.283
text = "Export"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="color_changed" from="UIRoot/ColorPicker" to="UIRoot/Palette" method="_on_ColorPicker_color_changed"]
[connection signal="button_down" from="UIRoot/ExportButton" to="UIRoot/ExportButton" method="_on_Button_button_down"]
